feat: add the core api for the moreu
